ReadableStream.pipeTo should reuse AbortSignal reason when needed https://bugs.webkit.org/show_bug.cgi?id=248591 rdar://problem/102849934

Reviewed by Alex Christensen.

Makr the AbortAlgorithm take the abort reason.
Use this value in ReadableStream code.
Covered by rebased tests.

* LayoutTests/imported/w3c/web-platform-tests/streams/piping/abort.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/streams/piping/abort.any.js:
(Object.create):
(promise_test.t.string_appeared_here.then):
(async promise_test):
(const.reason.of.null.promise_test.async t): Deleted.
* LayoutTests/imported/w3c/web-platform-tests/streams/piping/abort.any.serviceworker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/streams/piping/abort.any.sharedworker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/streams/piping/abort.any.worker-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/streams/piping/abort.any-expected.txt:
* Source/WebCore/Modules/streams/ReadableStreamInternals.js:
(readableStreamPipeToWritableStream):
(readableStreamReaderGenericRelease):
* Source/WebCore/dom/AbortAlgorithm.h:
* Source/WebCore/dom/AbortAlgorithm.idl:
* Source/WebCore/dom/AbortSignal.cpp:
(WebCore::AbortSignal::addAbortAlgorithmToSignal):

Canonical link: https://commits.webkit.org/257464@main