Source/WebCore/dom/AbortAlgorithm.h
@@ -29,13 +29,17 @@
 #include "CallbackResult.h"
 #include <wtf/ThreadSafeRefCounted.h>
 
+namespace JSC {
+class JSValue;
+} // namespace JSC
+
 namespace WebCore {
 
 class AbortAlgorithm : public ThreadSafeRefCounted<AbortAlgorithm>, public ActiveDOMCallback {
 public:
     using ActiveDOMCallback::ActiveDOMCallback;
 
-    virtual CallbackResult<void> handleEvent() = 0;
+    virtual CallbackResult<void> handleEvent(JSC::JSValue) = 0;
 };
 
 } // namespace WebCore
