Source/WebCore/dom/AbortSignal.cpp
@@ -137,11 +137,11 @@ void AbortSignal::eventListenersDidChange()
 uint32_t AbortSignal::addAbortAlgorithmToSignal(AbortSignal& signal, Ref<AbortAlgorithm>&& algorithm)
 {
     if (signal.aborted()) {
-        algorithm->handleEvent();
+        algorithm->handleEvent(signal.m_reason.getValue());
         return 0;
     }
-    return signal.addAlgorithm([algorithm = WTFMove(algorithm)](JSC::JSValue) mutable {
-        algorithm->handleEvent();
+    return signal.addAlgorithm([algorithm = WTFMove(algorithm)](JSC::JSValue value) mutable {
+        algorithm->handleEvent(value);
     });
 }
 
